# tlow

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docker/: Dockerfile
src/: CMakeLists.txt  actor.cpp  actor.hpp  game.cpp  main.cpp
test/: CMakeLists.txt  testmain.cpp
